--- a/HW1_Regression_with_inference_base.ipynb
+++ b/HW1_Regression_with_inference_base.ipynb
@@ -118,17 +118,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "id": "cabn04LjWJy8"
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
@@ -181,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +792,7 @@
        "6739  1248 CC      90 bhp     200Nm@ 1750-3000rpm    5.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "id": "Ldh5Afl1yx_D"
    },
@@ -963,7 +952,7 @@
        "4     65 bhp     96  Nm at 3000  rpm     5.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1110,7 @@
        "999            200Nm@ 1750rpm    5.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1150,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f10c1bd075ce4bc4ae0ef0cd72aa8ad1",
+       "model_id": "ce3ae26f36ae4b8382fdf63ab6d0e9b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1253,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "id": "SkyrBlHWiGY6"
    },
@@ -1571,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1588,7 +1577,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m df_train\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m5840\u001b[39m, \u001b[38;5;241m13\u001b[39m) \u001b[38;5;66;03m# Так как 3 задание выполнялось раньше дропнулась 1 колонка\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m df_train\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m5840\u001b[39m, \u001b[38;5;241m13\u001b[39m) \u001b[38;5;66;03m# Так как 3 задание выполнялось раньше дропнулась 1 колонка\u001b[39;00m\n",
       "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
@@ -1644,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "id": "kYKWyjsLYQuz"
    },
@@ -2112,7 +2101,7 @@
        "max     280.000000     9.000000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2135,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "id": "vF0yfzMOkEn8"
    },
@@ -2147,7 +2136,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m df_train\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m5840\u001b[39m, \u001b[38;5;241m13\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m df_train\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m5840\u001b[39m, \u001b[38;5;241m13\u001b[39m)\n",
       "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
@@ -2207,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "id": "0car89hFaby1"
    },
@@ -2215,10 +2204,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x17ccbdbf820>"
+       "<seaborn.axisgrid.PairGrid at 0x154f8676200>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2247,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "id": "NK9l6SrAeHK1"
    },
@@ -2255,10 +2244,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x17cd1dba9e0>"
+       "<seaborn.axisgrid.PairGrid at 0x154fe686da0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2310,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "id": "E99LVAN2fMVH"
    },
@@ -2321,7 +2310,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2386,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "HwlwJhDIp_2L"
    },
@@ -2970,7 +2959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {
     "id": "F3e5MGZMoeCR"
    },
@@ -3027,7 +3016,7 @@
        "0.5748269256185271"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3132,7 +3121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "id": "JyGl7KQQx_Ax"
    },
@@ -3210,7 +3199,7 @@
        "freq      1804    3177        5223         5336         3603"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3232,7 +3221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "id": "wbN4yM2Frob7"
    },
@@ -3262,7 +3251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
     "id": "SLXCtme53Oup"
    },
@@ -3342,7 +3331,7 @@
        "0.7726551952554067"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3399,7 +3388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {
     "id": "YrcaGhO7MnMR"
    },
@@ -3434,7 +3423,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(0.257)"
+       "np.float64(0.31)"
       ]
      },
      "metadata": {},
@@ -3446,15 +3435,15 @@
        "np.float64(0.227)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def business_metric(y_true, y_pred):\n",
-    "    relative_error = (y_pred - y_true).abs() / y_true\n",
-    "    score = (relative_error <= 0.1).mean() \n",
+    "    difference = (y_pred - y_true).abs() / y_true\n",
+    "    score = (difference <= 0.1).mean() \n",
     "    return score\n",
     "display(business_metric(y_test, pred_test))\n",
     "display(business_metric(y_test, test_lasso))\n",
