--- a/Выводы.md
+++ b/Выводы.md
@@ -142,5 +142,5 @@ y\_train R2 = 0.7726551952554067
 
 Расчёт бизнес-метрики показал, что ни одна из моделей не обеспечивает высокой точности определения стоимости автомобилей. Тем не менее лучшая модель, учитывающая категориальные признаки, корректно определяет стоимость в 31% случаев, тогда как остальные модели показывают результат около 22.7%.
 
-Приложение создавалось строго по заданию и с большой помощью кода Гордея. Экспериментировать не стал из за приблежения жесткого дедлайна по этому заданию)
+Приложение создавалось строго по заданию и с большой помощью кода Гордея. Экспериментировать не стал из за приближения жесткого дедлайна по этому заданию)
 
